Actuator e atualizar microsservico sem interrupcao

--- a/greeting-service/src/main/resources/application.yml
+++ b/greeting-service/src/main/resources/application.yml
@@ -8,6 +8,12 @@ spring:
   cloud:
     config:
       profile: perf
+management:
+  endpoints:
+    web:
+      exposure:
+        include:
+        - '*'
 greeting-service:
   greeting: "Olá"
   default-value: "Mundo"
